# pool

./: .gitignore  CMakeLists.txt  LICENSE  PoolLexer.g4  PoolParser.g4  README.md  mod.pool  std.pool  test.pool  test2.pool
.github/workflows/: build.yml  cmake.yml
cmake/: Antlr4Package.md  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  README.md  ResourceEmbed.cmake  antlr4-generator.cmake.in
include/: callable.hpp  context.hpp  libpool.h  llvm_poolstd.hpp  natives.hpp  pool.hpp  poolparser.h  poolstd.hpp
include/util/: errors.hpp  location.hpp  macro.hpp  strings.hpp
lib/: argagg.hpp  termcolor.hpp
poolc/: CMakeLists.txt  Cargo.toml  cbindgen.toml
poolc/src/: lib.rs  main.rs  pool.pest  pool.rs
poolparser/: CMakeLists.txt  Cargo.toml  cbindgen.toml
poolparser/src/: lib.rs  pool.pest  pool.rs
poolx/src/: ErrorListener.hpp  main.cpp  poolstd.cpp  poolstd.hpp  poolx.cpp  poolx.hpp  util.hpp
src/: ErrorListener.hpp  ObjectEmitter.cpp  ObjectEmitter.hpp  callable.cpp  callable.hpp  callable_private.hpp  context.cpp  context.hpp  llvm_natives.cpp  llvm_parser.cpp  llvm_parser.hpp  llvm_poolstd.cpp  main.cpp  natives.cpp  natives.hpp  parser.cpp  parser.hpp  pool.cpp  pool.hpp  pool_private.hpp  poolstd.cpp  poolstd.hpp  poolstd_private.hpp  std.cpp  std.hpp  util.hpp
src/llvm/: ObjectEmitter.hpp
src/util/: ErrorListener.hpp  dylib.cpp  dylib.hpp  errors.cpp  errors.hpp  location.cpp  location.hpp  strings.cpp  strings.hpp  time.hpp  util_macros.hpp
std/: std.pool
test/: mod2.pool  test.pool
test/external-test/: CMakeLists.txt  etest.pool  main.cpp
test/mod/: mod.pool  mod3.pool
test/mod4/: __module__.pool  a.pool  b.pool
