[package]
name = "poolparser"
version = "0.1.0"
authors = ["Alessandro Contenti <a.contenti@gmail.com>"]
edition = "2018"

[lib]
name = "poolparser"
crate-type = ["staticlib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"